k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-demo
  namespace: angular-demo
  labels:
    app: angular-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-demo
  template:
    metadata:
      labels:
        app: angular-demo
    spec:
      imagePullSecrets:
        - name: ocir-pull-secret
      containers:
        - name: angular-demo
          image: me-dubai-1.ocir.io/axuri6bvn1y8/infra-portal/angular-demo:req-2026-0142-c6bae95881e4
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
