k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-demo
  namespace: angular-demo
spec:
  selector:
    app: angular-demo
  ports:
    - port: 8080
      targetPort: 8080
