k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-demo
spec:
  ingressClassName: nginx
  rules:
    - host: angular-demo.dev-oke2.noqodi.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-demo
                port:
                  number: 8080
